# Calpyt1

./: README.md  main.py  pyproject.toml  setup.py
calpyt1/: __init__.py
calpyt1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
calpyt1/cli/: __init__.py  main.py
calpyt1/core/: __init__.py  base.py
calpyt1/numerical_calculus/: __init__.py  integration.py  ode_solver.py  optimization.py  root_finding.py
calpyt1/symbolic_calculus/: __init__.py  derivatives.py  integrals.py  limits.py  series.py
calpyt1/visualization/: __init__.py  plotting.py
examples/: __init__.py  numerical_examples.py  symbolic_examples.py  visualization_examples.py
notebooks/: numerical_methods_demo.ipynb  symbolic_calculus_demo.ipynb
tests/: __init__.py  test_numerical.py  test_symbolic.py
